--- a/client/src/Layout/Layout.css
+++ b/client/src/Layout/Layout.css
@@ -4,16 +4,17 @@
     display: flex;
     flex-direction: column;
     background-color: #f9fafb;
-}
-
-.header {
+  }
+  
+  .header {
     background-color: white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    width: 100%;
     height: 100px;
     flex-shrink: 0;
-}
-
-.header-container {
+  }
+  
+  .header-container {
     max-width: 1200px;
     height: 100%;
     margin: 0 auto;
@@ -21,28 +22,30 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-}
-
-/*logo section 고정*/
-.logo-section {
+  }
+  
+  /*logo section 고정*/
+  .logo-section {
     display: flex;
     align-items: center;
     gap: 0.75rem;
-}
-
-
-.logo-text {
+  }
+  
+  .logo {
+    height: 45px;
+  }
+  
+  .logo-text {
     display: flex;
-    flex-direction: column;
-}
-
-.university-name-ko {
+  }
+  
+  .university-name-ko {
     font-size: 1.4rem;
     font-weight: 600;
     color: #004098;
-}
-
-.university-name-en {
+  }
+  
+  .university-name-en {
     font-size: 0.85rem;
-    color: #4B5563;
-}
+    color: #4b5563;
+  }
