--- a/client/src/Main/Main.css
+++ b/client/src/Main/Main.css
@@ -2,12 +2,12 @@ select {
   background-color: white; /* 드롭다운 배경색 */
   color: black; /* 드롭다운 글자색 */
   border-radius: 4px;
-  font-family: "Moneygraphy-Rounded"; 
+  font-family: "Moneygraphy-Rounded";
   height: 50px;
   font-size: 19px;
   width: auto;
-  }
-  
+}
+
 /* 전체 레이아웃 */
 .min-h-screen {
   min-height: 100vh;
@@ -65,7 +65,8 @@ select {
 
 .university-name-en {
   font-size: 0.85rem;
-  color: #4B5563;
+  color: #4b5563;
+  color: #4b5563;
   text-align: left; /* 영문 이름 왼쪽 정렬 */
   line-height: 1.2; /* 줄 간격 조정 */
 }
@@ -137,6 +138,7 @@ select {
 .main-title {
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
+  padding-top: 5rem;
   color: #004098;
 }
 
@@ -153,12 +155,14 @@ select {
   padding: 2rem;
   width: 100%;
 }
+
 .creditselect-button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-family: inherit;
+  color: white;
   background-color: #004098;
 }
 /* 드롭다운 그리드 */
@@ -183,8 +187,16 @@ select {
   gap: 0.5rem;
 }
 
+.credit-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .form-label {
-  font-size: 0.875rem;
+  display: flex;
+  align-items: flex-end;
+  font-size: 1rem;
   font-weight: 500;
   color: #374151;
 }
@@ -217,11 +229,15 @@ select {
 
 /*모달 창*/
 .main-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
   padding: 2rem;
-  width: 100%;
+  width: 50%;
 }
 
 .modal-button {
@@ -281,12 +297,23 @@ select {
   background: #e60000;
 }
 
+.total-credit {
+  display: flex;
+  color: black;
+  border: 1px solid #e5e7eb;
+  border-radius: 8px;
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  white-space: pre-wrap;
+}
+
 /* 반응형 디자인 */
 @media (max-height: 700px) {
   .main-content {
     padding: 1rem;
   }
-  
+
   .form-container {
     padding: 1.5rem;
   }
@@ -299,4 +326,3 @@ select {
     gap: 1rem;
   }
 }
-  
