--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -1,4 +1,17 @@
 /* Login.css */
+.main-con{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* 수직 중앙 정렬 */
+  align-items: center; /* 수평 중앙 정렬 */
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  width: 100%;
+  margin-top: -50px; /* 약간 위로 올려서 시각적 중앙 조정 */
+}
+
 .service-name {
   background-color: #445EB4;
   color: white;
@@ -123,6 +136,7 @@
   background-color: #f9fafb;
   width: 100vw;
   overflow-x: hidden;
+  margin-top: 0%;
   display: flex;
   flex-direction: column;
 }
@@ -134,7 +148,6 @@
   flex-shrink: 0;
 }
 
-/* ... Main.css의 나머지 스타일들 ... */
 
 /* 제목 섹션 수정 */
 .title-section {
