--- a/client/src/Main/MainMedia.css
+++ b/client/src/Main/MainMedia.css
@@ -40,6 +40,7 @@
         color: #004098;
         line-height: 1.2; /* 줄 간격 조정 */
         text-align: left; /* 한글 이름 왼쪽 정렬 */
+        margin-top: 10%;
       }
       
     .university-name-en {
@@ -104,7 +105,6 @@
     /* 메인 컨텐츠 조정 */
     .main-content {
       padding: 1rem;
-      margin-top: 70px;
     }
   
     .main-title {
