--- a/client/src/Main/Main.css
+++ b/client/src/Main/Main.css
@@ -138,7 +138,7 @@ select {
 .main-title {
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
-  padding-top: 5rem;
+  padding-top: 50px;
   color: #004098;
 }
 
