--- a/client/src/Main/Main.css
+++ b/client/src/Main/Main.css
@@ -138,7 +138,7 @@ select {
 .main-title {
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
-  padding-top: 50px;
+  padding-top: 10%;
   color: #004098;
 }
 
@@ -168,7 +168,7 @@ select {
 /* 드롭다운 그리드 */
 .dropdown-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
   margin-bottom: 1.5rem;
 }
@@ -255,21 +255,39 @@ select {
   font-family: inherit;
 }
 
+.select-department-button {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.375rem;
+  font-size: 0.875rem;
+  background-color: white;
+  color:black;
+  font-family: "Moneygraphy-Rounded";
+  text-align: left;
+  height: 50px;
+}
+
+.form-label{
+  text-align: center;
+}
+
 /* 학점 선택 섹션 */
-.credit-section {
+.modals-section {
   margin-bottom: 20px;
 }
 
 /* 학점 선택 버튼 그룹 */
-.credit-buttons {
+.modals-buttons {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 /* 학점 선택 버튼 스타일 */
-.credit-button {
+.modals-button {
   padding: 10px 15px;
   border-radius: 8px;
   border: 1px solid #004098;
@@ -282,18 +300,18 @@ select {
 }
 
 /* 선택된 버튼 스타일 */
-.credit-button.selected {
+.modals-button.selected {
   background: #004098;
   color: white;
   font-weight: bold;
 }
 
 /* 버튼 호버 효과 */
-.credit-button:hover {
+.modals-button:hover {
   background: #e0eaff;
 }
 
-.close-button:hover {
+.modals-button:hover {
   background: #e60000;
 }
 
